/action_page.php remove from form

--- a/MOHContactTrack.html
+++ b/MOHContactTrack.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
 
-<form action="/action_page.php" class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
+<form action="" class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
 <div class="w3-center"><br>
       <img src="img_avatar4.png" alt="Logo" style="width:30%" class="w3-circle w3-margin-top">
 </div>
